# test_conan_bi

./: .gitignore  test_consumer_header_only_case.sh  test_consumer_regular_case.sh  test_library_header_only_bump_case.sh  test_library_header_only_case.sh  test_library_regular_case.sh  test_replay.sh
consumer/: conanfile.py  example.cpp
consumer_regular/: conanfile.py  example.cpp
libHO/: CMakeLists.txt  conanfile.py  template.py
libHO/include/: hello_header.h
libR/: conanfile.py
libR/src/: CMakeLists.txt  hellor.cpp  hellor.h
libX/: conanfile.py
libX/src/: hello.cpp
